# app-bricks-py

./: .gitignore  pyproject.toml
containers/ei-models-runner/: Dockerfile
containers/ei-models-runner/src/: start-runner.sh
docs_generator/: runner.py
models/: models-list.yaml
src/arduino/app_bricks/audio_classification/: __init__.py
src/arduino/app_bricks/audio_classification/examples/: 2_glass_breaking_from_file.py
src/arduino/app_bricks/cloud_llm/: README.md  brick_config.yaml  cloud_llm.py
src/arduino/app_bricks/dbstorage_sqlstore/: __init__.py
src/arduino/app_bricks/motion_detection/: __init__.py
src/arduino/app_bricks/object_detection/: __init__.py
src/arduino/app_bricks/streamlit_ui/: addons.py
src/arduino/app_bricks/vibration_anomaly_detection/: __init__.py
src/arduino/app_bricks/wave_generator/: README.md  __init__.py  brick_config.yaml  wave_generator.py
src/arduino/app_bricks/wave_generator/examples/: 01_basic_tone.py  02_waveform_types.py  03_frequency_sweep.py  04_envelope_control.py  05_external_speaker.py
src/arduino/app_bricks/web_ui/: web_ui.py
src/arduino/app_internal/core/: audio.py  ei.py
src/arduino/app_peripherals/speaker/: __init__.py
src/arduino/app_tools/: module_listing.py
src/arduino/app_utils/: __init__.py  ledmatrix.py
tests/arduino/app_bricks/dbstorage_sqlstore/: test_sqlstore.py
tests/arduino/app_bricks/motion_detection/: test_motion_detection.py
tests/arduino/app_bricks/objectdetection/: test_objectdetection.py
tests/arduino/app_bricks/vibration_anomaly_detection/: test_vibration_anomaly_detection.py
tests/arduino/app_bricks/wave_generator/: test_wave_generator.py
tests/arduino/app_bricks/web_ui/: test_web_ui.py  test_web_ui_integration.py
tests/arduino/app_core/: test_edge_impulse.py
tests/arduino/app_utils/ledmatrix/: test_frame.py
tests/arduino/app_utils/tls_cert_manager/: test_tls_cert_manager.py
